<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMeetingPlaces</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_description">Splash</string>
    <string name="buttonRetrieve">RETRIEVE</string>
    <string name="buttonRegister">REGISTER</string>
    <string name="buttonSetting">Settings</string>
    <string name="buttonAbout">About</string>
    <string name="latitude">LAT : </string>
    <string name="longitude">LNG : </string>
    <string name="remark">remark </string>
    <string name="imageDescription">image </string>
    <string name="buttonCapture">Take Photo</string>
    <string name="tvRemark">Remark: </string>
    <string name="buttonSave">Save</string>
    <string name="date">Date </string>
    <string name="time">Time </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_add_visiting_place">AddVisitingPlaceActivity</string>
    <string name="title_activity_visiting_place_list">VisitingPlaceListActivity</string>
    <string name="meetingPlace">My Meeting Places</string>
    <string name="lat">LAT </string>
    <string name="lon">LNG </string>
    <string name="currentLocation">Current Location</string>
    <string name="myVisitedPlace">My Visited Places</string>
    <string name="placeInformation">Place Information</string>
    <string name="buttonHome">Home</string>
    <string name="buttonDelete">Delete</string>
    <string name="title_activity_place_view">PlaceViewActivity</string>
    <string name="placeView">Place View</string>
    <string name="buttonRecord">Record Meeting Discussion</string>
    <string name="tvAudioFile">Audio File:</string>
    <string name="tvName">Name: </string>
    <string name="tvMobile">Mobile: </string>
    <string name="tvEmail">Email: </string>
    <string name="contactInformation">Contact Information </string>
    <string name="contactDetails">Contact Details </string>
    <string name="tvMeetingDiscussion">Meeting Discussion : </string>

</resources>