<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:background="#1B9D9D"
        android:gravity="center"
        android:text="@string/meetingPlace"
        android:textColor="#fff"
        android:textSize="25sp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4012550427537354/9686648421" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#96AA39"
            android:gravity="center"
            android:onClick="performRegister"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageDescription"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_new" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:background="#96AA39"
                android:gravity="left|center_vertical"
                android:text="@string/buttonRegister"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="#96AA39"
            android:gravity="center"
            android:onClick="performRetrieve"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageDescription"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_view_as_list" />

            <Button
                android:id="@+id/buttonRetrieve"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:background="#96AA39"
                android:gravity="left|center_vertical"
                android:text="@string/buttonRetrieve"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#424242"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageDescription"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_settings" />

            <Button
                android:id="@+id/buttonSeetings"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:background="#424242"
                android:gravity="left|center_vertical"
                android:text="@string/buttonSetting"
                android:textColor="#fff"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="#424242"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonAbout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:background="#424242"
                android:gravity="left|center_vertical"
                android:text="@string/buttonAbout"
                android:textColor="#fff"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageDescription"
                android:paddingLeft="10dp"
                android:src="@drawable/ic_action_about" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>